@@ -1,3 +1,8 @@
+2007-10-01  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-theme.[ch]:
+	Delete leftover files
+
 2007-09-28  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
